@@ -1,56 +1,74 @@
-
 package com.example.demo.service;
 
+import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.model.Product;
 import com.example.demo.dto.ProductDTO;
 import com.example.demo.repository.ProductRepository;
+
 import org.springframework.beans.factory.annotation.Autowired;
+
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
+
 
 @Service
 public class ProductService {
+
 
     private final ProductRepository productRepository;
 
     @Autowired
     public ProductService(ProductRepository productRepository) {
+
         this.productRepository = productRepository;
     }
-
+    @Cacheable("Products")
     public List<ProductDTO> getAllProducts() {
-        List<Product> products = productRepository.findAll();
-        return products.stream()
+
+        return productRepository.findAll()
+                .stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<ProductDTO> getProductById(Long id) {
-        Optional<Product> productOptional = productRepository.findById(id);
-        return productOptional.map(this::convertToDTO);
+        return productRepository.findById(id)
+                .map(product -> Optional.ofNullable(convertToDTO(product)))
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found with ID: " + id));
     }
 
+    @CacheEvict(value="Products",allEntries = true)
+    @CachePut(value = "Products",key = "#result.id")
     public ProductDTO saveProduct(ProductDTO productDTO) {
         Product product = convertToEntity(productDTO);
         Product savedProduct = productRepository.save(product);
         return convertToDTO(savedProduct);
     }
-
     public void deleteProduct(Long id) {
-        Optional<Product> productOptional = productRepository.findById(id);
-        productOptional.ifPresent(productRepository::delete);
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found with ID: " + id));
+
+        productRepository.delete(product);
     }
 
     public ProductDTO convertToDTO(Product product) {
+        if (product == null) {
+            return null;
+        }
         ProductDTO productDTO = new ProductDTO();
         productDTO.setId(product.getId());
         productDTO.setName(product.getName());
         productDTO.setProductsku(product.getProductsku());
         return productDTO;
     }
+
+
 
     public static Product convertToEntity(ProductDTO productDTO) {
         Product product = new Product();
